# data-soap

./: .coverage  .readthedocs.yaml  README-project.md  README.md  pyproject.toml  requirements.md  setup.py
data_soap/: data_soap.py  units.py
data_soap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
datasoap/: data_soap.py
datasoap.egg-info/: PKG-INFO  SOURCES.txt
docs/: index.rst  test.rst
htmlcov/: data_soap___init___py.html  data_soap_data_soap_py.html  index.html  status.json  tests___init___py.html  tests_test_data_soap_py.html  unit_data___init___py.html  unit_data_conversion_py.html
tests/: test_data_soap.py
unit_data/: conversion.py
