[tool.poetry]
name = "data-soap"
version = "0.1.0"
description = ""
authors = ["Grace Choi <choi.g.330@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
pytest = "^6.2.2"
pytest-watch = "^4.2.0"
coverage = "^5.4"

[tool.poetry.dev-dependencies]

black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
